<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort">Sort</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="release_date">23.06.2018</string>
    <string name="vote_average">10</string>
    <string name="trailer">Trailer # %1$d</string>
    <string name="trailers">Trailers</string>
    <string name="trailer_number">1</string>
    <string name="trailer_name"> The Shawshank Redemption - Trailer</string>
    <string name="trailer_quality"> 1080p </string>
    <string name="pick_trailer"> Select a trailer </string>
    <string name="review_author"> Cronus</string>
    <string name="review_content"> This is a nice movie! </string>
    <string name="reviews"> Reviews </string>
    <string name="no_reviews"> No reviews yet</string>
    <string name="no_trailers"> No trailers</string>
    <string name="add_favorites"> Add</string>
    <string name="remove_favorites">Remove</string>
    <string name="favorites"> Favorites</string>
    <string name="clean_db"> Clean Favorites</string>
    <string name="play_button">Play Button</string>
    <string name="poster">Movie Poster</string>
    <string name="share">Share Button</string>
    <string name="sort_title">Choose your thumbnails:</string>

    <string-array name="sort_array">
        <item>Sort by Most Popular</item>
        <item>Sort by Top Rated</item>
        <item>Favorites</item>
    </string-array>


</resources>
