<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/movieTrailersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/trailerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trailerNumber" />


        <TextView
            android:id="@+id/tvTrailer"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginEnd="316dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trailerQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="164dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_quality"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/trailerNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/trailer_number"
            app:layout_constraintStart_toEndOf="@+id/tvTrailer"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</layout>